# autobean-refactor

./: .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
autobean_refactor/: beancount.lark  editor.py  parser.py  printer.py  token_store.py
autobean_refactor/meta_models/: base.py  meta_models.py
autobean_refactor/modelgen/: descriptor.py  field_descriptor.py  generate.py  modelgen_test.py  raw_model.mako
autobean_refactor/models/: account.py  base.py  block_comment.py  bool.py  cost_spec.py  currency.py  custom.py  date.py  document.py  escaped_string.py  ignored.py  inline_comment.py  link.py  meta_item_internal.py  meta_key.py  note.py  null.py  number.py  number_add_expr.py  number_expr.py  number_mul_expr.py  posting_flag.py  punctuation.py  raw_models.py  spacing.py  tag.py  tolerance.py  transaction.py  transaction_flag.py
autobean_refactor/models/easy_models/: account.py  amount.py  amount_tolerance.py  balance.py  bool.py  close.py  commodity.py  currency.py  date.py  document.py  escaped_string.py  event.py  file.py  include.py  internal.py  link.py  meta_key.py  meta_value.py  note.py  null.py  number.py  number_expr.py  option.py  pad.py  plugin.py  posting_flag.py  price.py  punctuation.py  pushmeta.py  pushtag.py  query.py  tag.py  tolerance.py  transaction_flag.py
autobean_refactor/models/internal/: base_property.py  base_token_models.py  fields.py  interleaving_comments.py  properties.py  repeated.py  spacing_accessors.py  value_properties.py
autobean_refactor/models/raw_models/: amount.py  amount_tolerance.py  balance.py  base.py  close.py  commodity.py  editor.py  event.py  file.py  include.py  internal.py  option.py  pad.py  plugin.py  posting_flag.py  pushtag.py  query.py  tolerance.py  transaction_flag.py
autobean_refactor/tests/: base.py  conftest.py  editor_test.py  token_store_test.py
autobean_refactor/tests/benchmark/: benchmark_test.py
autobean_refactor/tests/generic/: auto_claim_comments_test.py  inline_comment_test.py  interleaving_comment_test.py  meta_test.py  recursive_parsing_test.py  spacing_accessors_test.py  surrounding_comment_test.py
docs/: _config.yml  _toc.yml  examples.md  getting-started.md  guarantees.md
docs/_extensions/: local.py
docs/_static/: custom.css  wrap-parameters.css
docs/_templates/: model.rst  type-alias.rst
docs/code/: basics.py  parsing.py
docs/generic/: models.md  token-models.md  tree-models.md
docs/references/: .gitignore  token-models.md  tree-models.md  type-aliases.md
docs/special/: comments.md  indents.md  meta.md  numbers.md  prices-costs.md  spacing.md
(+58 files in other folders)
