[project]
name = "autobean-refactor"
version = "0.1.0"
description = "An ergonomic and losess beancount manipulation library"
authors = [
    {name = "SEIAROTg", email = "seiarotg@gmail.com"},
]
dependencies = [
    "lark>=1.1.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "mako>=1.2.4",
    "stringcase>=1.2.0",
]
