[project]
name = "autobean-refactor"
version = "0.2.3"
description = "An ergonomic and losess beancount manipulation library"
authors = [
    {name = "SEIAROTg", email = "seiarotg@gmail.com"},
]
dependencies = [
    "lark>=1.1.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.build]
includes = [
    "autobean_refactor/",
]
excludes = [
    "autobean_refactor/tests/",
    "autobean_refactor/modelgen/",
    "autobean_refactor/meta_models/",
]

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "mako>=1.2.4",
    "stringcase>=1.2.0",
]
